Fix compilation error after fe4ffd81045144ffb8d69ae9e5df7ef191005128

Whether it works, no idea. But on the other hand, from the dicsussion
in fdo#61503 it doesn't seem as if that commit was deeply insightful
either. (And how it compiled on the commit author's machine, no idea.)

Change-Id: If6355b33c406e8da5bdb2bf77aaf8b2ac0c39343